7.5.4
  - In-place editing of query results.
  - Improved table search feature.
  - Minor GUI improvements.

7.5.3
  - Performance and GUI improvements.

7.5.2
  - https://github.com/Wisser/Jailer/pull/5 "Include the column names in the first statement to avoid ORA-00918: column ambiguously defined"
  - Table search feature.
  - Minor GUI improvements.

7.5
  - Full featured SQL Console with code completion, syntax highlighting
    and database schema visualization.

7.4.2
  - Improved data model merging.
  - Added ability to change the data model base folder.
  - Metadata views in data browser.

7.4.1
  - Minor GUI Improvements.

7.4
  - Integrated ClosureView into DataBrowser.
  - Double To String conversion without exponential scientific notation.

7.3.1
  - Bugfix: NPE happened when using import-filters.
  - Minor GUI Improvements.

7.3
  - Added ability to open more than one model editor at a time.
  - Issue #4 "NPE when using Weblogic Datasource" (https://github.com/Wisser/Jailer/issues/4 )

7.2.2
  - Performance optimization.
  - new filter type allows to exclude columns from export.

7.2.1
  - Fix for "#20 OutOfMemoryError: Java heap space - Reply" (https://sourceforge.net/p/jailer/bugs/20/ )

7.2
  - Introduction of the "expansion limit" feature for improved navigation.  
  - Searchable combo boxes.
  - Extensions of extraction model files have been changes from "csv" to "jm".

7.1
  - Small fixes for Java 9 compatibility.
  - Feature Requests #41 "Don't return exit code 0 on error in jailer.sh" (https://sourceforge.net/p/jailer/feature-requests/41/ )

7.0.7
  - Minor bug fixes.

7.0.6
  - Data Browser will automatically reconnect if the connection is lost.
  - Minor bug fixes.
  
7.0.5
  - Fixed a bug concerning temporary-table support.
  - Fixed connection leak in data browser.

7.0.4
  - Preventing NPE when trying to do an export via shell.

7.0.3
  - Minor bug fixes.

7.0.2
  - Fixed an NPE in MetaDataCache.