@@ -20,6 +20,7 @@ set CP=%CP%;%LIB%\jaxb-core-2.3.0-b170127.1453.jar
 set CP=%CP%;%LIB%\jaxb-impl-2.3.0-b170127.1453.jar
 set CP=%CP%;%LIB%\jaxb-api-2.3.0-b170201.1204.jar
 set CP=%CP%;%LIB%\jsqlparser-1.1.jar
+set CP=%CP%;%LIB%\tablefilter-swing-5.3.1.jar
 set CP=%CP%;jailer.jar
 
 start javaw -Xmx1024M -cp %CP% net.sf.jailer.ui.databrowser.DataBrowser %*
